<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>libroABC_Dialog</class>
 <widget class="QDialog" name="libroABC_Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>318</width>
    <height>362</height>
   </rect>
  </property>
  <property name="contextMenuPolicy">
   <enum>Qt::ActionsContextMenu</enum>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <widget class="QTableView" name="tableView"/>
   </item>
  </layout>
  <action name="actionAlta">
   <property name="text">
    <string>Alta</string>
   </property>
  </action>
  <action name="actionBaja">
   <property name="text">
    <string>Baja</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
